Trying to fix wrong ShoppingCartItem.css styling on Safari (7)

--- a/book-store-frontend/src/components/shopping-cart-item/ShoppingCartItem.css
+++ b/book-store-frontend/src/components/shopping-cart-item/ShoppingCartItem.css
@@ -30,25 +30,19 @@
     opacity: 0.7;
 }
 
-.shopping-cart-item-remove-button {
+.shopping-cart-items-buttons {
     border: 1px solid rgba(0,0,0,0.6);
-    border-right: none;
-    border-top-left-radius: 15px;
-    border-bottom-left-radius: 15px;
+    border-radius: 25px;
+}
+
+.shopping-cart-item-remove-button {
     font-weight: 400;
 }
 
 .shopping-cart-item-count {
-    border: 1px solid rgba(0,0,0,0.6);
-    border-left: none;
-    border-right: none;
     font-size: 1.5rem;
 }
 
-.shopping-cart-item-add-button {
-    border: 1px solid rgba(0,0,0,0.6);
-    border-left: none;
-    border-top-right-radius: 15px;
-    border-bottom-right-radius: 15px;
+.shopping-cart-item-add-button {;
     font-weight: 400;
 }
